# dynamic-scene-graphs

./: .gitignore  .gitmodules  README.md  notes.txt  pyproject.toml  requirements.txt
.cursor/rules/: rules.mdc
config/: undistort.yaml
config/paths/: default.yaml
configs/: base.yaml  sam2_reinit.yaml  sam2_tracking.yaml  undistort.yaml  video_tracking.yaml  viz_rerun.yaml
configs/new_objects_fct/: automask.yaml  farthest_point.yaml  sampling_cc.yaml
configs/paths/: default.yaml
configs/sam/: large.yaml  small.yaml  tiny.yaml
docs/: index.html
dsg/: odometry.py  rerun_text_retrieval.py  sam2_reinit.py  sam2_tmp.py  sam2_tracking.py  sam2_utils.py  segment.py  test_mask_first_frame.py  undistort.py  verify_dinov2_features.py  video_tracking.py  visualize_open3d.py  visualize_reconstructions.py  visualize_rerun.py  visualize_rerun_teaser.py  viz_obj_reconstruction.py  viz_rerun.py
dsg/features/: clip_features.py  dinov2.py  dinov3.py  salad.py
dsg/scenegraph/: graph.py  node.py
dsg/utils/: colmap_utils.py  cv2_utils.py  data_loading.py  open3d_utils.py  redwood.py  (+3 more)
notebooks/: rerun.ipynb  sam.ipynb
scripts/: ablate_sam_mask.sh  colmap.sh  compute_moge_depths.py  copy_and_run_sam2_multitrack.sh  create_side_by_side_visualizations.py  download_redwood.sh  download_sam.sh  extract_poses.sh  extract_zed.sh  make_videos_from_frames.py  preprocess_zed.sh  run_all_exp.sh  sam2_multitrack.py  select_and_convert_frames.py  undistort_and_segment.sh  viz_redwood.py  viz_semantic_redwood.py  viz_zed.py  viz_zed_obj_points.py  viz_zed_semantic.py
src/: odometry.py  sam2_reinit.py  sam2_tmp.py  sam2_tracking.py  segment.py  test_mask_first_frame.py  tsdf_integration.py  undistort.py  utils.py  verify_dinov2_features.py  visualize_rerun.py
(+25 files in other folders)
