[project]
name = "dynamic-scene-graphs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "open3d>=0.19.0",
    "rerun-sdk>=0.23.4",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
