[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.33.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "rerun-sdk>=0.23.4",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"] 
